--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,10 @@ flutter:
   assets:
     - assets/sound.m4a
     - assets/background.mp3
+    - assets/Screenshot1.png
+    - assets/Screenshot2.png
+    - assets/Screenshot3.png
+
   fonts:
     - family: CustomFont
       fonts:
